--- a/static/less/builder.less
+++ b/static/less/builder.less
@@ -96,6 +96,7 @@ button.help {
 .wysihtml5-toolbar {
   position: relative;
   padding: 10px 0 0 0;
+  color:@gray;
 
   &:first-child {
     padding-top: 0;
